tests/data/negative/test_data_nested_decl.orb
data Foo;

data Bar {
    Foo f;
}

fnc main() {}